fixed display bug affecting api options on tablet/desktop

--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,6 @@ li {
     }
 
     .options-flex-wrapper {
-        display: flex;
         flex-direction: row;
     }
 
